fix: 팀원들이 아닌, 클라이언트의 미션 기록만 불러왔던 버그 수정